# plate-color-classifier

./: .gitignore  README.md  evaluate_hybrid_full_report.py  export_improved_tiny_cnn_onnx.py  hsv_background_inference.py  hybrid_inference.py  pyproject.toml  requirements.txt  test_client_tensor.py
modules/: __init__.py  inference.py  postprocessing.py  preprocessing.py
